# Sycl_Graph

./: CMakeLists.txt
include/Sycl_Graph/: CMakeLists.txt  Common.hpp  Common_Types.hpp  Epidemiological.cxx  Sycl_Graph.hpp  Tracy_Config.hpp  instantiation.hpp  path_config.hpp  path_config.hpp.in  path_config.py  path_config.py.in  type_helpers.hpp
include/Sycl_Graph/Algorithms/: Algorithms.hpp
include/Sycl_Graph/Algorithms/Generation/: Graph_Generation.hpp
include/Sycl_Graph/Algorithms/Generation/Base/: Graph_Generation.hpp
include/Sycl_Graph/Algorithms/Generation/Sycl/: Graph_Generation.hpp
include/Sycl_Graph/Algorithms/Operations/: Buffer_Operations.hpp  Default_Operations.hpp  Degree_Properties.hpp  Edge_Operations.hpp  Invariant_Operations.hpp  Operation_Buffers.hpp  Operation_Graph.hpp  Operation_Sequence.hpp  Operation_Types.hpp  Operations.hpp  Vertex_Operations.hpp
include/Sycl_Graph/Algorithms/Properties/: Adjacency.hpp  Degree_Properties.hpp  Edge_Operations.hpp  Operation_Sequence.hpp  Operation_Types.hpp  Operations.hpp  Property_Extractor.hpp  Vertex_Operations.hpp
include/Sycl_Graph/Algorithms/Properties/Invariant/: Property_Extractor.hpp
include/Sycl_Graph/Algorithms/Properties/Sycl/: Degree_Properties.hpp  Property_Extractor.hpp
include/Sycl_Graph/Buffer/Base/: Buffer.cxx  Buffer.hpp  Buffer_Pack.hpp  Edge_Buffer.hpp  Edge_Buffer_Pack.hpp  Vertex_Buffer.hpp  Vertex_Buffer_Pack.hpp
include/Sycl_Graph/Buffer/Invariant/: Buffer.hpp  Edge_Buffer.hpp  Vertex_Buffer.hpp
include/Sycl_Graph/Buffer/Routines/: Add.cxx  Assign.cxx  Combine.cxx  Copy.cxx  Generate.cxx  Get.cxx  Print.cxx  Remove.cxx  Resize.cxx
include/Sycl_Graph/Buffer/Sycl/: Buffer.hpp  Buffer.ixx  Buffer_Pack.hpp  Buffer_Routines.hpp  Edge_Buffer.hpp  Edge_Buffer.ixx  Edge_Buffer_Pack.hpp  Vertex_Buffer.hpp  Vertex_Buffer.ixx  Vertex_Buffer_Pack.hpp  type_helpers.hpp
include/Sycl_Graph/Buffer/Sycl/Base/: Buffer.hpp  Edge_Buffer.hpp  Vertex_Buffer.hpp
include/Sycl_Graph/Buffer/Sycl/Invariant/: Buffer.hpp  Edge_Buffer.hpp  Vertex_Buffer.hpp
include/Sycl_Graph/Common/: Tracy_Config.hpp  common.hpp  pch_header.hpp  type_helpers.hpp
include/Sycl_Graph/Common_Kernels/: Merge_Vectors.hpp
include/Sycl_Graph/Epidemiological/: Epidemiological.hpp
include/Sycl_Graph/Epidemiological/SIR/Individual/: Extractors.hpp  Graph_Types.hpp  Types.hpp
include/Sycl_Graph/Epidemiological/SIR_Individual/: Operations.hpp  Types.hpp
include/Sycl_Graph/Epidemiological/SIR_Individual/Sycl/: Dynamics.hpp  Graph_Types.hpp
include/Sycl_Graph/Generation/: Complete_Graph.hpp  Erdos_Renyi.hpp  Random_Connect.hpp  SBM.hpp
include/Sycl_Graph/Generation/Base/: Graph_Generation.cxx
include/Sycl_Graph/Generation/Random_Connect/: Random_Connect_Buf_Inl copy.hpp  Random_Connect_Buf_Inl.hpp  Random_Connect_USM_Inl.hpp
include/Sycl_Graph/Generation/SBM/: SBM_Buf_Inl.hpp  SBM_Mapping.hpp  SBM_Types.hpp  SBM_USM_Inl.hpp
include/Sycl_Graph/Graph/: Adjacency_List.hpp  Graph.hpp  Graph_Types.hpp
include/Sycl_Graph/Graph/Base/: Adjacency_List.hpp  Graph.cxx  Graph.hpp  Graph_Types.cxx  Graph_Types.hpp  Invariant_Graph.hpp
include/Sycl_Graph/Graph/Invariant/: Graph.hpp  Graph_Types.hpp
include/Sycl_Graph/Graph/Sycl/: Graph.cxx  Graph.hpp  Invariant_Graph.hpp
include/Sycl_Graph/Graph/Sycl/Invariant/: Graph.hpp
include/Sycl_Graph/Math/: math.hpp
include/Sycl_Graph/Metrics/: Adjacency_List.hpp  Degrees.hpp  Edge_Limits.hpp
include/Sycl_Graph/Network/: Network.hpp  Network_Simulation_Data.hpp  _Network_Fixed_impl.hpp  _Network_Sycl_impl.hpp
include/Sycl_Graph/Network/Dynamics/: Network.hpp  Network_Types.hpp
include/Sycl_Graph/Network/Dynamics/SIR_Metapopulation/: SIR_Metapopulation.hpp  SIR_Metapopulation_Types.hpp
include/Sycl_Graph/Network/Dynamics/Synchronization/: Buffer_Routines.hpp
include/Sycl_Graph/Network/SIR_Bernoulli/: SIR_Bernoulli.hpp  SIR_Bernoulli_Types.hpp  _SIR_Bernoulli_Sycl_impl.hpp
include/Sycl_Graph/Network/SIR_Metapopulation/: SIR_Metapopulation.hpp  _SIR_Metapopulation_Sycl_impl.hpp  _SIR_Metapopulation_Sycl_impl_vertex.hpp
include/Sycl_Graph/Operations/: Degree_Properties.cxx  Edge_Operations.cxx  Operation_Buffers.cxx  Operation_Types.cxx  Operations.cxx  Vertex_Operations.cxx
include/Sycl_Graph/Utils/: Buffer_Utils.hpp  Math.hpp  Math_Inl.hpp  RNG_Generation.hpp  Sycl_Profiler.hpp  path_config.hpp  path_config.hpp.in  work_groups.hpp  zip.hpp
src/Generation/: CMakeLists.txt  Complete_Graph.cpp  Erdos_Renyi.cpp  Random_Connect.cpp  SBM.cpp
src/Generation/SBM/: CMakeLists.txt  SBM_Types.cpp
test/: .gitignore  CMakeLists.txt  SBM_test.cpp  SIR_Individual_Infection.cpp  a.out  accessor_dependency.cpp  adjacency_matrix.cpp  bgl.cpp  bitonic_sort.cpp  buffer_sizeof.cpp  casadi_jit.cpp  citygml_sentrum.cpp  cuda-test.cpp  device_copy.cpp  distributions.cpp  dynamic_graph.cpp  eigen_sycl.cpp  erdos_renyi_gen.cpp  etl_sycl.cpp  f.c  f_with_mem.c  foo.cpp  gpu_rng.cpp  graph_access.cpp  graph_merge_simulation.cpp  has_member.cpp  invariant_graph.cpp  jit_brute_force.cpp  jit_brute_force.hpp  kernel_ordering.cpp  property_extractor.cpp  random_connect_test.cpp  sycl_kernel_emit.cpp  tinymt_kernel.cpp  tuple_sort.cpp  type_helpers_test.cpp  vertex_buffer.cpp
test/Buffer/: CMakeLists.txt  buffer_access.cpp  buffer_assign_add.cpp  buffer_remove.cpp
test/CRTP/: dispatch.cpp
test/Epidemiological/: CMakeLists.txt  SIR_Individual_Sequence.cpp  SIR_Individual_Step.cpp
test/Generation/: erdos_renyi_gen.cpp
test/Instantiation/: .gitignore  CMakeLists.txt  FloatFoo.cpp  FooHeader.hpp  IntFoo.cpp  a.out  foobartype.cpp  main.cpp
test/Operations/: CMakeLists.txt  operation_buffers.cpp  operation_tests.cpp  property_extractor.cpp
test/Sycl/: a.out  atomic.cpp  buffer_address.cpp  device_copy.cpp  eigen_sycl.cpp  sycl_copy_profiling.cpp  sycl_device_info.cpp
test/Tuple/: CMakeLists.txt  a.out  constraint.cpp  multi_tuple.cpp  multipack.cpp  tuple_cat.cpp
test/module/: a.out  external_dep.pcm  hello.cpp  hello.pcm  hello2.cpp  hello2.pcm  main.cpp
(+25 files in other folders)
